--- a/cn.zh-CN/运维与监控/云助手/配置云助手客户端/安装云助手客户端.md
+++ b/cn.zh-CN/运维与监控/云助手/配置云助手客户端/安装云助手客户端.md
@@ -328,6 +328,21 @@ keyword: [云助手, 远程命令, 运维插件, 阿里云, ecs]
     **说明：** Windows系统会隐藏已知文件类型的扩展名，您必须设置显示已知文件类型的扩展名才能真正判断region-id是否带有扩展名。
 
 
+## 查看ECS实例的云助手客户端信息
+
+您安装好云助手客户端后，可以通过以下步骤查看ECS实例的云助手客户端版本号、状态等信息。
+
+1.  登录[ECS管理控制台](https://ecs.console.aliyun.com)。
+
+2.  在左侧导航栏，选择**运维与监控** \> **发送命令/文件（云助手）**。
+
+3.  在顶部菜单栏左上角处，选择地域。
+
+4.  单击**ECS实例**页签，查看当前地域ECS实例上的云助手客户端信息。
+
+    ![查询结果](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3977270261/p272643.png)
+
+
 **相关文档**  
 
 
