--- a/cn.zh-CN/实例/实例规格族.md
+++ b/cn.zh-CN/实例/实例规格族.md
@@ -1569,13 +1569,13 @@ i3g的特点如下：
 
 i3g包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|本地存储（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:--------|:-------------|--------------|:----------|------|:--|:---|-------|---------|------------|
-|ecs.i3g.2xlarge|8|32.0|1 \* 447|3.0|10|175|25|8|4|15|5.25|2.0|
-|ecs.i3g.4xlarge|16|64.0|1 \* 894|5.0|10|350|30|8|8|15|8.40|3.0|
-|ecs.i3g.8xlarge|32|128.0|2 \* 894|12.0|无|700|60|8|8|30|15.75|5.0|
-|ecs.i3g.13xlarge|52|192.0|3 \* 894|16.0|无|1200|90|16|8|30|25.20|8.0|
-|ecs.i3g.26xlarge|104|384.0|6 \* 894|32.0|无|2400|180|32|15|30|50.00|16.0|
+|实例规格|vCPU|内存（GiB）|本地存储（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:--------|:-------------|--------------|:-------|---|:--|:---|-------|------|------------|
+|ecs.i3g.2xlarge|8|32.0|1 \* 447|3.0|10|175万|25万|8|4|15|5.25万|2.0|
+|ecs.i3g.4xlarge|16|64.0|1 \* 894|5.0|10|350万|30万|8|8|15|8.40万|3.0|
+|ecs.i3g.8xlarge|32|128.0|2 \* 894|12.0|无|700万|60万|8|8|30|15.75万|5.0|
+|ecs.i3g.13xlarge|52|192.0|3 \* 894|16.0|无|1200万|90万|16|8|30|25.20万|8.0|
+|ecs.i3g.26xlarge|104|384.0|6 \* 894|32.0|无|2400万|180万|32|15|30|50.00万|16.0|
 
 **说明：**
 
@@ -1605,14 +1605,14 @@ i3的特点如下：
 
 i3包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|本地存储（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:--------|:-------------|--------------|:----------|------|:--|:---|-------|---------|------------|
-|ecs.i3.xlarge|4|32.0|1 \* 894|1.5|10|100|25|4|4|15|4|1.5|
-|ecs.i3.2xlarge|8|64.0|1 \* 1788|2.5|10|160|25|8|4|15|5|2.0|
-|ecs.i3.4xlarge|16|128.0|2 \* 1788|5.0|10|300|30|8|8|30|8|3.0|
-|ecs.i3.8xlarge|32|256.0|4 \* 1788|10.0|无|600|60|16|8|30|15|5.0|
-|ecs.i3.13xlarge|52|384.0|6 \* 1788|16.0|无|900|90|32|7|30|24|8.0|
-|ecs.i3.26xlarge|104|768.0|12 \* 1788|32.0|无|2400|180|32|15|30|48|16.0|
+|实例规格|vCPU|内存（GiB）|本地存储（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:--------|:-------------|--------------|:-------|---|:--|:---|-------|------|------------|
+|ecs.i3.xlarge|4|32.0|1 \* 894|1.5|10|100万|25万|4|4|15|4万|1.5|
+|ecs.i3.2xlarge|8|64.0|1 \* 1788|2.5|10|160万|25万|8|4|15|5万|2.0|
+|ecs.i3.4xlarge|16|128.0|2 \* 1788|5.0|10|300万|30万|8|8|30|8万|3.0|
+|ecs.i3.8xlarge|32|256.0|4 \* 1788|10.0|无|600万|60万|16|8|30|15万|5.0|
+|ecs.i3.13xlarge|52|384.0|6 \* 1788|16.0|无|900万|90万|32|7|30|24万|8.0|
+|ecs.i3.26xlarge|104|768.0|12 \* 1788|32.0|无|2400万|180万|32|15|30|48万|16.0|
 
 **说明：**
 
@@ -1641,14 +1641,16 @@ i2的特点如下：
 
 i2包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|本地存储（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|云盘带宽（Gbit/s）|
-|:---|:---|:------|:--------|:-----------|:----------|:--|:---|-------|------------|
-|ecs.i2.xlarge|4|32.0|1 \* 894|1.0|50|2|3|10|最高16|
-|ecs.i2.2xlarge|8|64.0|1 \* 1788|2.0|100|2|4|10|最高16|
-|ecs.i2.4xlarge|16|128.0|2 \* 1788|3.0|150|4|8|20|最高16|
-|ecs.i2.8xlarge|32|256.0|4 \* 1788|6.0|200|8|8|20|最高16|
-|ecs.i2.16xlarge|64|512.0|8 \* 1788|10.0|400|16|8|20|最高16|
-|ecs.i2d.21xlarge|84|712.0|4 \* 3570|25.0|400|32|16|20|最高16|
+|实例规格|vCPU|内存（GiB）|本地存储（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘带宽（Gbit/s）|
+|:---|:---|:------|:--------|:-----------|:-------|:--|:---|-------|------------|
+|ecs.i2.xlarge|4|32.0|1 \* 894|1.0|50万|2|3|10|最高16|
+|ecs.i2.2xlarge|8|64.0|1 \* 1788|2.0|100万|2|4|10|最高16|
+|ecs.i2.4xlarge|16|128.0|2 \* 1788|3.0|150万|4|8|20|最高16|
+|ecs.i2.8xlarge|32|256.0|4 \* 1788|6.0|200万|8|8|20|最高16|
+|ecs.i2.16xlarge|64|512.0|8 \* 1788|10.0|400万|16|8|20|最高16|
+|ecs.i2d.11xlarge|46|356.0|2 \* 3570|10.0|200万|16|8|20|最高16|
+|ecs.i2d.21xlarge|84|712.0|4 \* 3570|25.0|400万|32|16|20|最高16|
+|ecs.i2d.23xlarge|92|712.0|4 \* 3570|25.0|400万|32|15|20|最高16|
 
 **说明：**
 
@@ -1676,12 +1678,12 @@ i2g的特点如下：
 
 i2g包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|本地存储（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:--------|:-----------|:----------|:--|:---|-------|
-|ecs.i2g.2xlarge|8|32.0|1 \* 894|2.0|100|2|4|10|
-|ecs.i2g.4xlarge|16|64.0|1 \* 1788|3.0|150|4|8|20|
-|ecs.i2g.8xlarge|32|128.0|2 \* 1788|6.0|200|8|8|20|
-|ecs.i2g.16xlarge|64|256.0|4 \* 1788|10.0|400|16|8|20|
+|实例规格|vCPU|内存（GiB）|本地存储（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:--------|:-----------|:-------|:--|:---|-------|
+|ecs.i2g.2xlarge|8|32.0|1 \* 894|2.0|100万|2|4|10|
+|ecs.i2g.4xlarge|16|64.0|1 \* 1788|3.0|150万|4|8|20|
+|ecs.i2g.8xlarge|32|128.0|2 \* 1788|6.0|200万|8|8|20|
+|ecs.i2g.16xlarge|64|256.0|4 \* 1788|10.0|400万|16|8|20|
 
 **说明：**
 
@@ -1711,13 +1713,13 @@ i2ne的特点如下：
 
 i2ne包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|本地存储（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|云盘带宽（Gbit/s）|
-|:---|:---|:------|:--------|:-----------|:----------|:--|:---|-------|------------|
-|ecs.i2ne.xlarge|4|32.0|1 \* 894|1.5|50|2|3|10|最高16|
-|ecs.i2ne.2xlarge|8|64.0|1 \* 1788|2.5|100|2|4|10|最高16|
-|ecs.i2ne.4xlarge|16|128.0|2 \* 1788|5.0|150|4|8|20|最高16|
-|ecs.i2ne.8xlarge|32|256.0|4 \* 1788|10.0|200|8|8|20|最高16|
-|ecs.i2ne.16xlarge|64|512.0|8 \* 1788|20.0|400|16|8|20|最高16|
+|实例规格|vCPU|内存（GiB）|本地存储（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘带宽（Gbit/s）|
+|:---|:---|:------|:--------|:-----------|:-------|:--|:---|-------|------------|
+|ecs.i2ne.xlarge|4|32.0|1 \* 894|1.5|50万|2|3|10|最高16|
+|ecs.i2ne.2xlarge|8|64.0|1 \* 1788|2.5|100万|2|4|10|最高16|
+|ecs.i2ne.4xlarge|16|128.0|2 \* 1788|5.0|150万|4|8|20|最高16|
+|ecs.i2ne.8xlarge|32|256.0|4 \* 1788|10.0|200万|8|8|20|最高16|
+|ecs.i2ne.16xlarge|64|512.0|8 \* 1788|20.0|400万|16|8|20|最高16|
 
 **说明：**
 
@@ -1746,12 +1748,12 @@ i2gne的特点如下：
 
 i2gne包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|本地存储（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:--------|:-----------|:----------|:--|:---|-------|
-|ecs.i2gne.2xlarge|8|32.0|1 \* 894|2.5|100|2|4|10|
-|ecs.i2gne.4xlarge|16|64.0|1 \* 1788|5.0|150|4|8|20|
-|ecs.i2gne.8xlarge|32|128.0|2 \* 1788|10.0|200|8|8|20|
-|ecs.i2gne.16xlarge|64|256.0|4 \* 1788|20.0|400|16|8|20|
+|实例规格|vCPU|内存（GiB）|本地存储（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:--------|:-----------|:-------|:--|:---|-------|
+|ecs.i2gne.2xlarge|8|32.0|1 \* 894|2.5|100万|2|4|10|
+|ecs.i2gne.4xlarge|16|64.0|1 \* 1788|5.0|150万|4|8|20|
+|ecs.i2gne.8xlarge|32|128.0|2 \* 1788|10.0|200万|8|8|20|
+|ecs.i2gne.16xlarge|64|256.0|4 \* 1788|20.0|400万|16|8|20|
 
 **说明：**
 
@@ -2364,17 +2366,17 @@ i1的特点如下：
 
 i1包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|本地存储（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:--------|:-----------|:----------|:--|:---|-------|
-|ecs.i1.xlarge|4|16.0|2 \* 104|0.8|20|1|3|10|
-|ecs.i1.2xlarge|8|32.0|2 \* 208|1.5|40|1|4|10|
-|ecs.i1.3xlarge|12|48.0|2 \* 312|2.0|40|1|6|10|
-|ecs.i1.4xlarge|16|64.0|2 \* 416|3.0|50|2|8|20|
-|ecs.i1-c5d1.4xlarge|16|64.0|2 \* 1456|3.0|40|2|8|20|
-|ecs.i1.6xlarge|24|96.0|2 \* 624|4.5|60|2|8|20|
-|ecs.i1.8xlarge|32|128.0|2 \* 832|6.0|80|3|8|20|
-|ecs.i1-c10d1.8xlarge|32|128.0|2 \* 1456|6.0|80|3|8|20|
-|ecs.i1.14xlarge|56|224.0|2 \* 1456|10.0|120|4|8|20|
+|实例规格|vCPU|内存（GiB）|本地存储（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:--------|:-----------|:-------|:--|:---|-------|
+|ecs.i1.xlarge|4|16.0|2 \* 104|0.8|20万|1|3|10|
+|ecs.i1.2xlarge|8|32.0|2 \* 208|1.5|40万|1|4|10|
+|ecs.i1.3xlarge|12|48.0|2 \* 312|2.0|40万|1|6|10|
+|ecs.i1.4xlarge|16|64.0|2 \* 416|3.0|50万|2|8|20|
+|ecs.i1-c5d1.4xlarge|16|64.0|2 \* 1456|3.0|40万|2|8|20|
+|ecs.i1.6xlarge|24|96.0|2 \* 624|4.5|60万|2|8|20|
+|ecs.i1.8xlarge|32|128.0|2 \* 832|6.0|80万|3|8|20|
+|ecs.i1-c10d1.8xlarge|32|128.0|2 \* 1456|6.0|80万|3|8|20|
+|ecs.i1.14xlarge|56|224.0|2 \* 1456|10.0|120万|4|8|20|
 
 **说明：**
 
