--- a/cn.zh-CN/运维与监控/云助手/使用云助手/立即执行命令.md
+++ b/cn.zh-CN/运维与监控/云助手/使用云助手/立即执行命令.md
@@ -7,7 +7,7 @@ keyword: [云助手, 远程命令, ecs, aliyun, 运维]
 通过立即执行命令，您可以同时创建命令和执行命令。
 
 -   实例的状态必须为**运行中**（Running）。
--   在一个阿里云地域下，您可以保存100条云助手命令，配额随您的云服务器使用情况可能会增加。 关于如何查询配额，请参见[步骤一：查看资源配额](/cn.zh-CN/标签与资源/资源/权益配额/查看和提升资源配额.md)。在立即执行命令时，如果您**仅执行**命令，则不占用云助手命令配额。
+-   在一个阿里云地域下，您可以保存100条云助手命令，配额随您的云服务器使用情况可能会增加。 关于如何查询配额，请参见[步骤一：查看资源配额](/cn.zh-CN/标签与资源/资源/权益配额/查看和提升资源配额.md)。在立即执行命令时，如果您只执行命令，则不占用云助手命令配额。
 
     **说明：** 您也可以调用API DescribeAccountAttributes，将参数AttributeName.N设置为max-axt-command-count，查询一个地域中云助手命令配额。
 
