--- a/cn.zh-CN/最佳实践/块存储/云盘缩容.md
+++ b/cn.zh-CN/最佳实践/块存储/云盘缩容.md
@@ -6,30 +6,50 @@
 
 SMC的研发初衷是为了平衡阿里云用户的云上及线下业务负载，但是您也可以利用其工作原理，实现云服务器ECS的云盘缩容。
 
-SMC可以根据您的ECS实例重新创建一份自定义镜像，在创建过程中通过重新指定云盘大小，然后使用自定义镜像新购实例，以达到缩容的目的。除了将目标对象换成了ECS实例之外，云盘缩容和迁云这两种场景的使用方法和使用限制完全一致。由于使用对象为虚拟化的ECS实例，还可以降低报错机率，更加高效。
+SMC可以根据您的ECS实例重新创建一份自定义镜像或者直接迁移至目标实例，在导入迁移源时，通过重新指定云盘大小进行缩容。开始迁移前，您必须注意：
 
-需要注意这种缩容方式，会引起原有ECS实例的部分属性发生变化，例如，实例ID（`InstanceId`）和公网IP。如果您的实例为专有网络VPC类型的实例，可以将公网IP转换为弹性公网IP以保留该公网IP。因此，建议使用弹性公网IP（EIP）或者对公网IP依赖程度较轻的用户使用该方式缩容。
+-   如果您使用迁移源迁移至目标实例的方式完成云盘缩容，请确保迁移源与目标实例不是同一台实例。您必须迁移至除迁移源的其它可用ECS实例，并且该目标实例内无数据或已将所有数据备份至镜像、快照或该实例以外的设备中。
 
-1.  远程连接待缩容的ECS实例。
+    **警告：** 创建迁移任务后，目标实例中的原数据将会清除。因此，如果作为目标实例的ECS实例中存在重要数据，SMC不推荐您使用该方式将迁移源直接迁移至目标实例。推荐您在迁移时，目标类型选择云服务器镜像，再通过镜像创建ECS实例。
 
-    具体操作，请参见[远程连接](/cn.zh-CN/实例/连接实例/使用第三方客户端工具连接实例/使用用户名密码验证连接Linux实例.md)。
+-   由于使用SMC进行云盘缩容将更换ECS实例，因此会引起ECS实例的部分属性发生变化。例如：实例ID（`InstanceId`）和公网IP。
 
-2.  下载[SMC客户端](https://p2v-tools.oss-cn-hangzhou.aliyuncs.com/smc/Alibaba_Cloud_Migration_Tool.zip?file=Alibaba_Cloud_Migration_Tool.zip)。
+    如果您的迁移源实例为专有网络VPC类型的实例，可以将公网IP转换为弹性公网IP以保留该公网IP。因此，如果您已使用弹性公网IP（EIP）或者对公网IP依赖程度较轻，建议您使用SMC完成云盘缩容。
 
-3.  解压SMC客户端压缩包。
 
-    SMC客户端为Windows和Linux系统均提供32位和64位版本（i386表示32位，x86\_64表示64位）。请根据迁移源的平台类型，选择相应的客户端版本。
+1.  导入迁移源。
 
-4.  导入迁移源。具体操作，请参见[步骤一：导入迁移源](/cn.zh-CN/用户指南/步骤一：导入迁移源.md)。
+    您需要先在待缩容的ECS实例内下载SMC客户端，并通过SMC客户端将该实例作为迁移源导入SMC。具体操作，请参见[步骤一：导入迁移源](/cn.zh-CN/用户指南/步骤一：导入迁移源.md)。
 
-5.  创建并启动迁移任务。
+2.  创建并启动迁移任务。
 
-    迁移至指定目标实例完成云盘缩容，具体操作，请参见[源服务器迁移至目标实例](/cn.zh-CN/最佳实践/源服务器迁移至目标实例.md)。
+    迁移至指定目标实例完成云盘缩容的具体操作，请参见[源服务器迁移至目标实例](/cn.zh-CN/最佳实践/源服务器迁移至目标实例.md)。创建迁移任务时您需要注意：
 
-    创建迁移任务时，**目标磁盘**中的**系统盘**和**数据盘**大小，设置为您需要缩容的预期值，该值不能小于系统盘或数据盘实际使用空间的大小。
-
-6.  等待迁移任务完成。
+    -   **目标磁盘**中的**系统盘**和**数据盘**大小，设置为您需要缩容的预期值，该值不能小于系统盘或数据盘实际使用空间的大小。
+    -   如果您需要通过迁移源创建自定义镜像，再通过自定义镜像创建新的ECS实例，请在创建迁移任务时，将**目标类型**设置为**云服务器镜像**。
+3.  等待迁移任务完成。
 
     -   当迁移任务状态为**已完成**（Finished），表示任务完成并能够查看目标实例。
+        -   如果您选择迁移的目标类型为云服务器实例，可以在操作列，单击**查看目标实例**跳转至目标实例详情页。
+        -   如果您选择迁移的目标类型为云服务器镜像，可以按照以下操作使用镜像创建一个新的ECS实例。
+            1.  验证迁移结果。该功能将使用阿里云提供的OOS模板ACS-SMC-CreateAndVerifyInstance，自动验证迁移任务生成的镜像能否成功创建实例，并正常启动。
+                1.  在操作列单击**验证迁移结果**。
+
+                    ![ECS image](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0939670061/p169247.png)
+
+                2.  在弹出的对话框中了解验证流程，并单击**立即验证**。
+
+                    您也可以单击**自定义验证脚本参数**，手动配置参数进行验证。
+
+                3.  在**最近一次迁移结果验证状态**列，查看验证结果。
+                    -   **成功**：表示迁移结果无异常。您可以单击**查看输出参数**了解验证结果。
+                    -   **失败**：表示迁移结果存在异常。您可以单击**查看原因**了解失败的原因，并根据原因排查问题。
+                    -   您也可以单击操作列![...](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3079670061/p169257.png)，并单击**前往OOS查看历史验证**获取OOS模板的历史执行信息。
+            2.  在操作列单击**创建实例**。
+
+                ![list](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3079670061/p129881.png)
+
+            3.  配置实例信息并完成实例创建，具体操作，请参见[使用自定义镜像创建实例](/cn.zh-CN/实例/创建实例/使用自定义镜像创建实例.md)。
+            4.  远程连接实例，检查迁移后的系统，具体操作，请参见[迁移Windows服务器后怎么检查系统](/cn.zh-CN/常见问题/SMC FAQ.md)或[迁移Linux服务器后怎么检查系统](/cn.zh-CN/常见问题/SMC FAQ.mdsection_8nx_71l_ksv)。
     -   当任务状态为**出错**（InError），表示任务失败。您需要查看日志修复问题后，再次重启迁移任务。常见错误及修复方案，请参见[SMC FAQ](/cn.zh-CN/常见问题/SMC FAQ.md)。
 
