--- a/cn.zh-CN/动态与公告/新功能发布记录.md
+++ b/cn.zh-CN/动态与公告/新功能发布记录.md
@@ -18,6 +18,7 @@
 -   操作系统内相关配置诊断支持更多诊断项。
 
 |2021-04-15|全部|[诊断实例的健康状态](/cn.zh-CN/运维与监控/实例健康诊断/诊断实例的健康状态.md)|
+|实例休眠|发布实例休眠功能，休眠实例后再次启动实例，ECS实例会自动恢复至休眠前的应用程序状态。|2021-04-06|部分|[休眠实例](/cn.zh-CN/实例/管理实例/休眠实例.md)|
 |快照|发布实例快照功能，您可以为一台ECS实例中的多个云盘同时创建快照，保证数据写入时序上的一致性。|2021-04-06|部分|[创建多个云盘快照（实例快照）](/cn.zh-CN/快照/使用实例快照/创建多个云盘快照（实例快照）.md)|
 |快照|发布应用一致性快照功能，您使用应用一致性快照进行回滚时，可确保应用处于一致性的启动状态。|2021-04-06|部分|[开启应用一致性快照功能](/cn.zh-CN/快照/使用实例快照/开启应用一致性快照功能.md)|
 
@@ -80,7 +81,7 @@
 |抢占式实例|调用OpenAPI创建抢占式实例时，支持设置为无保护周期。|2020-09-25|全部|-   [抢占式实例概述](/cn.zh-CN/实例/选择实例购买方式/抢占式实例/抢占式实例概述.md)
 -   [RunInstances](/cn.zh-CN/API参考/实例/RunInstances.md)
 -   [抢占式实例开放无保护期新模式](https://developer.aliyun.com/article/773655) |
-|云助手|支持直接发送本地文件到ECS实例，方便您运维和管理ECS实例。|2020-09-22|全部|[发送本地文件到ECS实例](/cn.zh-CN/运维与监控/云助手/使用云助手/发送本地文件到ECS实例.md)|
+|云助手|支持直接发送本地文件到ECS实例，方便您运维和管理ECS实例。|2020-09-22|全部|[发送本地文件到ECS实例](/cn.zh-CN/运维与监控/云助手/使用云助手/上传本地文件到ECS实例.md)|
 |节省计划|一种折扣权益计划，可以抵扣按量付费实例（不含抢占式实例）的账单。|2020-09-18|全部|-   [节省计划概述](/cn.zh-CN/实例/选择实例购买方式/节省计划/节省计划概述.md)
 -   [节省计划](/cn.zh-CN/产品计费/计费方式/节省计划.md)
 -   [t1950747.md\#](/cn.zh-CN/实例/选择实例购买方式/节省计划/购买和使用节省计划.md) |
@@ -306,7 +307,7 @@
 |功能名称|功能描述|发布时间|发布地域|相关文档|
 |----|:---|:---|----|:---|
 |突发性能实例（t5）|突发性能实例支持无性能约束模式。|2018-09-30|全部|[无性能约束模式](/cn.zh-CN/实例/选择实例规格/突发型/突发性能实例概述.mdsection_i6c_2kn_y5s)|
-|实例元数据Metadata|实例元数据metadata支持实例运维相关系统事件信息。|2018-09-14|全部|[实例元数据](/cn.zh-CN/实例/管理实例/使用实例元数据/实例元数据概述.md)|
+|实例元数据Metadata|实例元数据metadata支持实例运维相关系统事件信息。|2018-09-14|全部|[实例元数据](/cn.zh-CN/实例/管理实例/使用实例元数据/ECS实例元数据概述.md)|
 |实例健康状态|ECS实例详情页面提供实例健康状态。|2018-09-14|全部|[查看实例健康状况](/cn.zh-CN/运维与监控/监控实例状态/查看实例健康状况.md)|
 |实例规格族|最新一代GPU云主机gn6v（V100机型）正式售卖。|2018-09-12|全部|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
 |实例购买|支持批量续费实例以及购买历史实例。|2018-09-07|全部|[手动续费实例](/cn.zh-CN/产品计费/续费实例/手动续费实例.md)|
@@ -372,7 +373,7 @@
 |GPU实例|支持NGC GPU加速容器。|2018-03-28|全部|[在gn5实例上部署NGC环境](/cn.zh-CN/最佳实践/GPU实例最佳实践/在GPU实例上部署NGC环境.md)|
 |系统事件|发布系统事件功能。|2018-03-26|全部|[系统事件概述](/cn.zh-CN/运维与监控/系统事件/系统事件概述.md)|
 |弹性裸金属服务器|发布弹性裸金属服务器。|2018-03-14|全部|[弹性裸金属服务器概述](/cn.zh-CN/实例/选择实例规格/弹性裸金属服务器/弹性裸金属服务器概述.md)|
-|实例标识|发布实例标识功能。|2018-03-01|全部|[使用实例标识](/cn.zh-CN/实例/管理实例/使用实例标识.md)|
+|实例标识|发布实例标识功能。|2018-03-01|全部|[使用实例标识](/cn.zh-CN/实例/管理实例/使用实例元数据/使用实例标识.md)|
 
 ## 2018年2月
 
