--- a/cn.zh-CN/实例/实例规格族.md
+++ b/cn.zh-CN/实例/实例规格族.md
@@ -2560,14 +2560,14 @@ gn6i的特点如下：
 
 gn6i包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:--|:----|------------|:----------|:--|:---|-------|
-|ecs.gn6i-c4g1.xlarge|4|15.0|NVIDIA T4 \* 1|16GB \* 1|4.0|50|2|2|10|
-|ecs.gn6i-c8g1.2xlarge|8|31.0|NVIDIA T4 \* 1|16GB \* 1|5.0|80|2|2|10|
-|ecs.gn6i-c16g1.4xlarge|16|62.0|NVIDIA T4 \* 1|16GB \* 1|6.0|100|4|3|10|
-|ecs.gn6i-c24g1.6xlarge|24|93.0|NVIDIA T4 \* 1|16GB \* 1|7.5|120|6|4|10|
-|ecs.gn6i-c24g1.12xlarge|48|186.0|NVIDIA T4 \* 2|16GB \* 2|15.0|240|12|6|10|
-|ecs.gn6i-c24g1.24xlarge|96|372.0|NVIDIA T4 \* 4|16GB \* 4|30.0|480|24|8|10|
+|实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS（万）|存储IOPS基准（万）|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:--|:----|------------|:----------|-----------|:--|:---|-------|
+|ecs.gn6i-c4g1.xlarge|4|15.0|NVIDIA T4 \* 1|16GB \* 1|4.0|50|无|2|2|10|
+|ecs.gn6i-c8g1.2xlarge|8|31.0|NVIDIA T4 \* 1|16GB \* 1|5.0|80|无|2|2|10|
+|ecs.gn6i-c16g1.4xlarge|16|62.0|NVIDIA T4 \* 1|16GB \* 1|6.0|100|无|4|3|10|
+|ecs.gn6i-c24g1.6xlarge|24|93.0|NVIDIA T4 \* 1|16GB \* 1|7.5|120|无|6|4|10|
+|ecs.gn6i-c24g1.12xlarge|48|186.0|NVIDIA T4 \* 2|16GB \* 2|15.0|240|无|12|6|10|
+|ecs.gn6i-c24g1.24xlarge|96|372.0|NVIDIA T4 \* 4|16GB \* 4|30.0|480|25|24|8|10|
 
 **说明：**
 
@@ -2637,12 +2637,12 @@ gn6v的特点如下：
 
 gn6v包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:--|:----|:-----------|:----------|:--|:---|-------|
-|ecs.gn6v-c8g1.2xlarge|8|32.0|NVIDIA V100 \* 1|16GB \* 1|2.5|80|4|4|10|
-|ecs.gn6v-c8g1.8xlarge|32|128.0|NVIDIA V100 \* 4|16GB \* 4|10.0|200|8|8|20|
-|ecs.gn6v-c8g1.16xlarge|64|256.0|NVIDIA V100 \* 8|16GB \* 8|20.0|250|16|8|20|
-|ecs.gn6v-c10g1.20xlarge|82|336.0|NVIDIA V100 \* 8|16GB \* 8|32.0|450|16|8|20|
+|实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS（万）|存储IOPS基准（万）|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:--|:----|:-----------|:----------|-----------|:--|:---|-------|
+|ecs.gn6v-c8g1.2xlarge|8|32.0|NVIDIA V100 \* 1|16GB \* 1|2.5|80|无|4|4|10|
+|ecs.gn6v-c8g1.8xlarge|32|128.0|NVIDIA V100 \* 4|16GB \* 4|10.0|200|无|8|8|20|
+|ecs.gn6v-c8g1.16xlarge|64|256.0|NVIDIA V100 \* 8|16GB \* 8|20.0|250|无|16|8|20|
+|ecs.gn6v-c10g1.20xlarge|82|336.0|NVIDIA V100 \* 8|16GB \* 8|32.0|450|25|16|8|20|
 
 **说明：**
 
