--- a/cn.zh-CN/实例/升降配实例/修改实例规格/包年包月实例升配规格.md
+++ b/cn.zh-CN/实例/升降配实例/修改实例规格/包年包月实例升配规格.md
@@ -6,7 +6,7 @@ keyword: [阿里云, ecs, 升配, 包年包月, 升级内存, cpu升级]
 
 当包年包月实例的规格（vCPU和内存）无法满足您的业务需求时，您可以使用升级配置功能升配实例规格。升配后重启实例，新实例规格立即生效。
 
-升级配置前，请确认当前规格族是否支持升配，更多信息请参见[支持变配的实例规格](/cn.zh-CN/实例/升降配实例/修改实例规格/支持变配的实例规格.md)。
+升级配置前，请确认当前规格族是否支持升配，更多信息请参见[支持变配的实例规格](/cn.zh-CN/实例/升降配实例/支持变配的实例规格.md)。
 
 使用升级配置功能，您需要为当前计费周期的剩余时间补差价。
 
@@ -27,7 +27,7 @@ keyword: [阿里云, ecs, 升配, 包年包月, 升级内存, cpu升级]
 
 1.  登录[ECS管理控制台](https://ecs.console.aliyun.com)。
 
-2.  在左侧导航栏，单击**实例与镜像** \> **实例**。
+2.  在左侧导航栏，选择**实例与镜像** \> **实例**。
 
 3.  在顶部菜单栏左上角处，选择地域。
 
@@ -56,7 +56,7 @@ keyword: [阿里云, ecs, 升配, 包年包月, 升级内存, cpu升级]
 
 1.  登录[ECS管理控制台](https://ecs.console.aliyun.com)。
 
-2.  在左侧导航栏，单击**实例与镜像** \> **实例**。
+2.  在左侧导航栏，选择**实例与镜像** \> **实例**。
 
 3.  在顶部菜单栏左上角处，选择地域。
 
@@ -68,7 +68,7 @@ keyword: [阿里云, ecs, 升配, 包年包月, 升级内存, cpu升级]
 
     如果实例未满足实例规格相同、可用区相同等要求，会被自动过滤，只能继续操作符合要求的实例，如下图所示。
 
-    ![批量升级实例规格](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9314359951/p134726.png)
+    ![批量升级实例规格](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9314359951/p134726.png)
 
     1.  选择目标实例规格。
 
@@ -91,4 +91,6 @@ keyword: [阿里云, ecs, 升配, 包年包月, 升级内存, cpu升级]
 [RebootInstance](/cn.zh-CN/API参考/实例/RebootInstance.md)
 
 [DescribeResourcesModification](/cn.zh-CN/API参考/地域/DescribeResourcesModification.md)
+
+[ModifyPrepayInstanceSpec](/cn.zh-CN/API参考/实例/ModifyPrepayInstanceSpec.md)
 
