--- a/intl.zh-CN/实例/选择实例规格/通用型.md
+++ b/intl.zh-CN/实例/选择实例规格/通用型.md
@@ -54,17 +54,17 @@ g7的特点如下：
 
 g7包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|支持vTPM|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
-|:---|:---|:------|------------|:-------|------|---|:---|-------|------|------------|
-|ecs.g7.large|2|8.0|突发最高10.0|90万|是|2|3|6|突发最高10.0万|突发最高6.0|
-|ecs.g7.xlarge|4|16.0|突发最高10.0|100万|是|4|4|15|突发最高10.0万|突发最高6.0|
-|ecs.g7.2xlarge|8|32.0|突发最高10.0|160万|是|8|4|15|突发最高10.0万|突发最高6.0|
-|ecs.g7.3xlarge|12|48.0|突发最高10.0|240万|是|8|8|15|突发最高10.0万|突发最高6.0|
-|ecs.g7.4xlarge|16|64.0|突发最高25.0|300万|是|8|8|30|突发最高10.0万|突发最高6.0|
-|ecs.g7.6xlarge|24|96.0|突发最高25.0|450万|是|12|8|30|10.0万|6.0|
-|ecs.g7.8xlarge|32|128.0|突发最高25.0|600万|是|16|8|30|15.0万|8.0|
-|ecs.g7.16xlarge|64|256.0|32.0|1200万|是|32|8|30|30.0万|16.0|
-|ecs.g7.32xlarge|128|512.0|64.0|2400万|是|32|15|30|60.0万|32.0|
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|支持vTPM|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS基础/突发|云盘带宽基础/突发（Gbit/s）|
+|:---|:---|:------|-----------------|:-------|------|---|---|:---|-------|-----------|-----------------|
+|ecs.g7.large|2|8|2/最高10|90万|是|最高25万|2|3|6|2万/最高11万|1.5/最高6|
+|ecs.g7.xlarge|4|16|3/最高10|100万|是|最高25万|4|4|15|4万/最高11万|2/最高6|
+|ecs.g7.2xlarge|8|32|5/最高10|160万|是|最高25万|8|4|15|5万/最高11万|3/最高6|
+|ecs.g7.3xlarge|12|48|8/最高10|240万|是|最高25万|8|8|15|7万/最高11万|4/最高6|
+|ecs.g7.4xlarge|16|64|10/最高25|300万|是|30万|8|8|30|8万/最高11万|5/最高6|
+|ecs.g7.6xlarge|24|96|12/最高25|450万|是|45万|12|8|30|11万/无|6/无|
+|ecs.g7.8xlarge|32|128|16/最高25|600万|是|60万|16|8|30|15万/无|8/无|
+|ecs.g7.16xlarge|64|256|32/无|1200万|是|120万|32|8|30|30万/无|16/无|
+|ecs.g7.32xlarge|128|512|64/无|2400万|是|240万|32|15|30|60万/无|32/无|
 
 **说明：**
 
@@ -84,7 +84,7 @@ g7t的特点如下：
 -   依托第三代神龙架构，将大量虚拟化功能卸载到专用硬件，降低虚拟化开销，提供稳定可预期的超高性能。
 -   计算：
     -   处理器与内存配比为1:4，其中加密内存在内存中的占比约为50%
-    -   处理器：采用第三代Intel® Xeon®可扩展处理器，计算性能稳定
+    -   处理器：采用第三代Intel® Xeon®可扩展处理器（Ice Lake），基频2.7 GHz，全核睿频3.5 GHz，计算性能稳定
     -   支持开启或关闭超线程配置
 -   存储：
     -   I/O优化实例
@@ -104,17 +104,17 @@ g7t的特点如下：
 
 g7t包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|含加密内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|支持vTPM|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
-|:---|:---|:------|----------|------------|:-------|------|---|:---|-------|------|------------|
-|ecs.g7t.large|2|8.0|4.0|突发最高10.0|90万|是|2|3|6|突发最高10.0万|突发最高6.0|
-|ecs.g7t.xlarge|4|16.0|8.0|突发最高10.0|100万|是|4|4|15|突发最高10.0万|突发最高6.0|
-|ecs.g7t.2xlarge|8|32.0|16.0|突发最高10.0|160万|是|8|4|15|突发最高10.0万|突发最高6.0|
-|ecs.g7t.3xlarge|12|48.0|24.0|突发最高10.0|240万|是|8|8|15|突发最高10.0万|突发最高6.0|
-|ecs.g7t.4xlarge|16|64.0|32.0|突发最高25.0|300万|是|8|8|30|突发最高10.0万|突发最高6.0|
-|ecs.g7t.6xlarge|24|96.0|48.0|突发最高25.0|450万|是|12|8|30|10.0万|6.0|
-|ecs.g7t.8xlarge|32|128.0|64.0|突发最高25.0|600万|是|16|8|30|15.0万|8.0|
-|ecs.g7t.16xlarge|64|256.0|128.0|32.0|1200万|是|32|8|30|30.0万|16.0|
-|ecs.g7t.32xlarge|128|512.0|256.0|64.0|2400万|是|32|15|30|60.0万|32.0|
+|实例规格|vCPU|内存（GiB）|含加密内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|支持vTPM|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS基础/突发|云盘带宽基础/突发（Gbit/s）|
+|:---|:---|:------|----------|-----------------|:-------|------|---|---|:---|-------|-----------|-----------------|
+|ecs.g7t.large|2|8|4|2/最高10|90万|是|最高25万|2|3|6|2万/最高11万|1.5/最高6|
+|ecs.g7t.xlarge|4|16|8|3/最高10|100万|是|最高25万|4|4|15|4万/最高11万|2/最高6|
+|ecs.g7t.2xlarge|8|32|16|5/最高10|160万|是|最高25万|8|4|15|5万/最高11万|3/最高6|
+|ecs.g7t.3xlarge|12|48|24|8/最高10|240万|是|最高25万|8|8|15|7万/最高11万|4/最高6|
+|ecs.g7t.4xlarge|16|64|32|10/最高25|300万|是|30万|8|8|30|8万/最高11万|5/最高6|
+|ecs.g7t.6xlarge|24|96|48|12/最高25|450万|是|45万|12|8|30|11万/无|6/无|
+|ecs.g7t.8xlarge|32|128|64|16/最高25|600万|是|60万|16|8|30|15万/无|8/无|
+|ecs.g7t.16xlarge|64|256|128|32/无|1200万|是|120万|32|8|30|30万/无|16/无|
+|ecs.g7t.32xlarge|128|512|256|64/无|2400万|是|240万|32|15|30|60万/无|32/无|
 
 **说明：**
 
@@ -147,16 +147,16 @@ g7ne的特点如下：
 
 g7ne包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
-|:---|:---|:------|--------------|--------------|:-------|---|---|:---|-------|------|------------|
-|ecs.g7ne.large|2|8.0|1.5|10.0|90万|45万|2|3|10|1.0万|0.75|
-|ecs.g7ne.xlarge|4|16.0|3.0|10.0|100万|90万|4|4|15|2.0万|1.0|
-|ecs.g7ne.2xlarge|8|32.0|6.0|15.0|150万|175万|8|6|15|2.5万|1.2|
-|ecs.g7ne.4xlarge|16|64.0|12.5|25.0|300万|350万|16|8|30|4.0万|2.0|
-|ecs.g7ne.8xlarge|32|128.0|25.0|无|600万|600万|16|8|30|7.5万|5.0|
-|ecs.g7ne.12xlarge|48|192.0|40.0|无|1200万|800万|32|8|30|10.0万|8.0|
-|ecs.g7ne.16xlarge|64|256.0|50.0|无|1600万|1400万|32|8|30|15.0万|8.0|
-|ecs.g7ne.24xlarge|96|384.0|80.0|无|2400万|1600万|32|15|50|24.0万|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|-----------------|:-------|---|---|:---|-------|------|------------|
+|ecs.g7ne.large|2|8|1.5/10|90万|45万|2|3|10|1万|0.75|
+|ecs.g7ne.xlarge|4|16|3/10|100万|90万|4|4|15|2万|1|
+|ecs.g7ne.2xlarge|8|32|6/15|150万|175万|8|6|15|2.5万|1.2|
+|ecs.g7ne.4xlarge|16|64|12/25|300万|350万|16|8|30|4万|2|
+|ecs.g7ne.8xlarge|32|128|25/无|600万|600万|16|8|30|7.5万|5|
+|ecs.g7ne.12xlarge|48|192|40/无|1200万|800万|32|8|30|10万|8|
+|ecs.g7ne.16xlarge|64|256|50/无|1600万|1400万|32|8|30|15万|8|
+|ecs.g7ne.24xlarge|96|384|80/无|2400万|1600万|32|15|50|24万|16|
 
 **说明：**
 
@@ -192,14 +192,14 @@ g6se的特点如下：
 
 g6se包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
-|:---|:---|:------|--------------|--------------|:-------|---|:---|-------|------|------------|
-|ecs.g6se.large|2|8.0|0.7|2.0|30万|2|2|6|3.0万|1.5|
-|ecs.g6se.xlarge|4|16.0|1.0|3.0|50万|4|3|10|6.0万|2.0|
-|ecs.g6se.2xlarge|8|32.0|1.5|5.0|80万|8|4|10|9.0万|3.0|
-|ecs.g6se.4xlarge|16|64.0|3.0|6.0|100万|8|8|20|15.0万|5.0|
-|ecs.g6se.8xlarge|32|128.0|6.0|无|200万|16|8|20|30.0万|10.0|
-|ecs.g6se.13xlarge|52|192.0|8.0|无|300万|32|7|20|50.0万|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|-----------------|:-------|---|:---|-------|------|------------|
+|ecs.g6se.large|2|8|0.7/2|30万|2|2|6|3万|1.5|
+|ecs.g6se.xlarge|4|16|1/3|50万|4|3|10|6万|2|
+|ecs.g6se.2xlarge|8|32|1.5/5|80万|8|4|10|9万|3|
+|ecs.g6se.4xlarge|16|64|3/6|100万|8|8|20|15万|5|
+|ecs.g6se.8xlarge|32|128|6/无|200万|16|8|20|30万|10|
+|ecs.g6se.13xlarge|52|192|8/无|300万|32|7|20|50万|16|
 
 **说明：**
 
@@ -216,7 +216,7 @@ g6a的特点如下：
     -   处理器：2.6 GHz主频的AMD EPYCTM ROME处理器，睿频3.3 GHz，计算性能稳定
     -   支持开启或关闭超线程配置
 
-        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义CPU选项](/intl.zh-CN/实例/管理实例/自定义CPU选项.md)。
+        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/intl.zh-CN/实例/管理实例/自定义CPU选项/自定义和查看CPU选项.md)。
 
 -   存储：
     -   I/O优化实例
@@ -240,16 +240,16 @@ g6a的特点如下：
 
 g6a包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS|弹性网卡|云盘IOPS|云盘带宽（Gbit/s）|
-|:---|:---|:------|--------------|--------------|:-------|:---|------|------------|
-|ecs.g6a.large|2|8.0|1.0|10.0|90万|2|1.25万|1.0|
-|ecs.g6a.xlarge|4|16.0|1.5|10.0|100万|3|2.0万|1.5|
-|ecs.g6a.2xlarge|8|32.0|2.5|10.0|160万|4|3.0万|2.0|
-|ecs.g6a.4xlarge|16|64.0|5.0|10.0|200万|8|6.0万|3.0|
-|ecs.g6a.8xlarge|32|128.0|8.0|10.0|300万|7|7.5万|4.0|
-|ecs.g6a.16xlarge|64|256.0|16.0|无|600万|8|15.0万|8.0|
-|ecs.g6a.32xlarge|128|512.0|32.0|无|1200万|15|30.0万|16.0|
-|ecs.g6a.64xlarge|256|1024.0|64.0|无|2400万|15|60.0万|32.0|
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|弹性网卡|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|-----------------|:-------|:---|------|------------|
+|ecs.g6a.large|2|8|1/10|90万|2|1.25万|1|
+|ecs.g6a.xlarge|4|16|1.5/10|100万|3|2万|1.5|
+|ecs.g6a.2xlarge|8|32|2.5/10|160万|4|3万|2|
+|ecs.g6a.4xlarge|16|64|5/10|200万|8|6万|3|
+|ecs.g6a.8xlarge|32|128|8/10|300万|7|7.5万|4|
+|ecs.g6a.16xlarge|64|256|16/无|600万|8|15万|8|
+|ecs.g6a.32xlarge|128|512|32/无|1200万|15|30万|16|
+|ecs.g6a.64xlarge|256|1024|64/无|2400万|15|60万|32|
 
 **说明：**
 
@@ -269,7 +269,7 @@ g6t的特点如下：
     -   处理器：2.5 GHz主频、3.2 GHz睿频的Intel ® Xeon ® Platinum 8269（Cascade Lake），计算性能稳定
     -   支持开启和关闭超线程配置
 
-        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义CPU选项](/intl.zh-CN/实例/管理实例/自定义CPU选项.md)。
+        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/intl.zh-CN/实例/管理实例/自定义CPU选项/自定义和查看CPU选项.md)。
 
 -   存储：
     -   I/O优化实例
@@ -294,15 +294,15 @@ g6t的特点如下：
 
 g6t包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|支持vTPM|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:-------|------|---|:--|:---|-------|------|------------|
-|ecs.g6t.large|2|8.0|突发最高10.0|90万|是|最高25万|2|3|6|2.0万|1.0|
-|ecs.g6t.xlarge|4|16.0|突发最高10.0|100万|是|最高25万|4|4|15|4.0万|1.5|
-|ecs.g6t.2xlarge|8|32.0|突发最高10.0|160万|是|最高25万|8|4|15|5.0万|2.0|
-|ecs.g6t.4xlarge|16|64.0|突发最高10.0|300万|是|30万|8|8|30|8.0万|3.0|
-|ecs.g6t.8xlarge|32|128.0|10.0|600万|是|60万|16|8|30|15.0万|5.0|
-|ecs.g6t.13xlarge|52|192.0|16.0|900万|是|90万|32|7|30|24.0万|8.0|
-|ecs.g6t.26xlarge|104|384.0|32.0|2400万|是|180万|32|15|30|48.0万|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|支持vTPM|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽基础（Gbit/s）|
+|:---|:---|:------|:----------------|:-------|------|---|:--|:---|-------|------|--------------|
+|ecs.g6t.large|2|8|1.2/最高10|90万|是|最高25万|2|3|6|2万|1|
+|ecs.g6t.xlarge|4|16|2/最高10|100万|是|最高25万|4|4|15|4万|1.5|
+|ecs.g6t.2xlarge|8|32|3/最高10|160万|是|最高25万|8|4|15|5万|2|
+|ecs.g6t.4xlarge|16|64|6/最高10|300万|是|30万|8|8|30|8万|3|
+|ecs.g6t.8xlarge|32|128|10/无|600万|是|60万|16|8|30|15万|5|
+|ecs.g6t.13xlarge|52|192|16/无|900万|是|90万|32|7|30|24万|8|
+|ecs.g6t.26xlarge|104|384|32/无|2400万|是|180万|32|15|30|48万|16|
 
 **说明：**
 
@@ -320,7 +320,7 @@ g6e的特点如下：
     -   处理器：2.5 GHz主频、3.2 GHz睿频的Intel ® Xeon ® Platinum 8269（Cascade），计算性能稳定
     -   支持开启或关闭超线程配置
 
-        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义CPU选项](/intl.zh-CN/实例/管理实例/自定义CPU选项.md)。
+        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/intl.zh-CN/实例/管理实例/自定义CPU选项/自定义和查看CPU选项.md)。
 
 -   存储：
     -   I/O优化实例
@@ -347,15 +347,15 @@ g6e的特点如下：
 
 g6e包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
-|:---|:---|:------|------------|:-------|---|:--|:---|-------|------|------------|
-|ecs.g6e.large|2|8.0|突发最高10.0|90万|最高25万|2|3|6|2.0万|1.0|
-|ecs.g6e.xlarge|4|16.0|突发最高10.0|100万|最高25万|4|4|15|4.0万|1.5|
-|ecs.g6e.2xlarge|8|32.0|突发最高10.0|160万|最高25万|8|4|15|5.0万|2.0|
-|ecs.g6e.4xlarge|16|64.0|突发最高10.0|300万|30万|8|8|30|8.0万|3.0|
-|ecs.g6e.8xlarge|32|128.0|10.0|600万|60万|16|8|30|15.0万|5.0|
-|ecs.g6e.13xlarge|52|192.0|16.0|900万|90万|32|7|30|24.0万|8.0|
-|ecs.g6e.26xlarge|104|384.0|32.0|2400万|180万|32|15|30|48.0万|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|-----------------|:-------|---|:--|:---|-------|------|------------|
+|ecs.g6e.large|2|8|1.2/最高10|90万|最高25万|2|3|6|2万|1|
+|ecs.g6e.xlarge|4|16|2/最高10|100万|最高25万|4|4|15|4万|1.5|
+|ecs.g6e.2xlarge|8|32|3/最高10|160万|最高25万|8|4|15|5万|2|
+|ecs.g6e.4xlarge|16|64|6/最高10|300万|30万|8|8|30|8万|3|
+|ecs.g6e.8xlarge|32|128|10/无|600万|60万|16|8|30|15万|5|
+|ecs.g6e.13xlarge|52|192|16/无|900万|90万|32|7|30|24万|8|
+|ecs.g6e.26xlarge|104|384|32/无|2400万|180万|32|15|30|48万|16|
 
 **说明：**
 
@@ -373,7 +373,7 @@ g6的特点如下：
     -   处理器：2.5 GHz主频的Intel ® Xeon ® Platinum 8269CY（Cascade Lake），睿频3.2 GHz，计算性能稳定
     -   支持开启或关闭超线程配置
 
-        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义CPU选项](/intl.zh-CN/实例/管理实例/自定义CPU选项.md)。
+        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/intl.zh-CN/实例/管理实例/自定义CPU选项/自定义和查看CPU选项.md)。
 
 -   存储：
     -   I/O优化实例
@@ -404,17 +404,17 @@ g6的特点如下：
 
 g6包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-------------|--------------|:-------|---|:--|:---|-------|------|------------|
-|ecs.g6.large|2|8.0|1.0|3.0|30万|最高25万|2|2|6|1.0万|1|
-|ecs.g6.xlarge|4|16.0|1.5|5.0|50万|最高25万|4|3|10|2.0万|1.5|
-|ecs.g6.2xlarge|8|32.0|2.5|8.0|80万|最高25万|8|4|10|2.5万|2|
-|ecs.g6.3xlarge|12|48.0|4.0|10.0|90万|最高25万|8|6|10|3.0万|2.5|
-|ecs.g6.4xlarge|16|64.0|5.0|10.0|100万|30万|8|8|20|4.0万|3|
-|ecs.g6.6xlarge|24|96.0|7.5|10.0|150万|45万|12|8|20|5.0万|4|
-|ecs.g6.8xlarge|32|128.0|10.0|无|200万|60万|16|8|20|6.0万|5|
-|ecs.g6.13xlarge|52|192.0|12.5|无|300万|90万|32|7|20|10.0万|8|
-|ecs.g6.26xlarge|104|384.0|25.0|无|600万|180万|32|15|20|20.0万|16|
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:----------------|:-------|---|:--|:---|-------|------|------------|
+|ecs.g6.large|2|8|1/3|30万|最高25万|2|2|6|1万|1|
+|ecs.g6.xlarge|4|16|1.5/5|50万|最高25万|4|3|10|2万|1.5|
+|ecs.g6.2xlarge|8|32|2.5/8|80万|最高25万|8|4|10|2.5万|2|
+|ecs.g6.3xlarge|12|48|4/10|90万|最高25万|8|6|10|3万|2.5|
+|ecs.g6.4xlarge|16|64|5/10|100万|30万|8|8|20|4万|3|
+|ecs.g6.6xlarge|24|96|7.5/10|150万|45万|12|8|20|5万|4|
+|ecs.g6.8xlarge|32|128|10/无|200万|60万|16|8|20|6万|5|
+|ecs.g6.13xlarge|52|192|12.5/无|300万|90万|32|7|20|10万|8|
+|ecs.g6.26xlarge|104|384|25/无|600万|180万|32|15|20|20万|16|
 
 **说明：**
 
@@ -452,14 +452,14 @@ g5包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|:-----------|:-------|:--|:---|-------|
-|ecs.g5.large|2|8.0|1.0|30万|2|2|6|
-|ecs.g5.xlarge|4|16.0|1.5|50万|2|3|10|
-|ecs.g5.2xlarge|8|32.0|2.5|80万|2|4|10|
-|ecs.g5.3xlarge|12|48.0|4.0|90万|4|6|10|
-|ecs.g5.4xlarge|16|64.0|5.0|100万|4|8|20|
-|ecs.g5.6xlarge|24|96.0|7.5|150万|6|8|20|
-|ecs.g5.8xlarge|32|128.0|10.0|200万|8|8|20|
-|ecs.g5.16xlarge|64|256.0|20.0|400万|16|8|20|
+|ecs.g5.large|2|8|1|30万|2|2|6|
+|ecs.g5.xlarge|4|16|1.5|50万|2|3|10|
+|ecs.g5.2xlarge|8|32|2.5|80万|2|4|10|
+|ecs.g5.3xlarge|12|48|4|90万|4|6|10|
+|ecs.g5.4xlarge|16|64|5|100万|4|8|20|
+|ecs.g5.6xlarge|24|96|7.5|150万|6|8|20|
+|ecs.g5.8xlarge|32|128|10|200万|8|8|20|
+|ecs.g5.16xlarge|64|256|20|400万|16|8|20|
 
 **说明：**
 
@@ -494,13 +494,13 @@ g5ne包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|---|:--|:---|-------|------|------------|
-|ecs.g5ne.large|2|8.0|1.0|40万|45万|2|3|10|1.0万|1|
-|ecs.g5ne.xlarge|4|16.0|2.0|75万|90万|4|4|15|1.5万|1|
-|ecs.g5ne.2xlarge|8|32.0|3.5|150万|175万|8|6|15|3.0万|1|
-|ecs.g5ne.4xlarge|16|64.0|7.0|300万|350万|16|8|30|6.0万|2|
-|ecs.g5ne.8xlarge|32|128.0|15.0|600万|700万|32|8|30|12.0万|4|
-|ecs.g5ne.16xlarge|64|256.0|30.0|1200万|1400万|32|8|30|24.0万|8|
-|ecs.g5ne.18xlarge|72|288.0|33.0|1350万|1600万|32|15|50|27.0万|9|
+|ecs.g5ne.large|2|8|1|40万|45万|2|3|10|1万|1|
+|ecs.g5ne.xlarge|4|16|2|75万|90万|4|4|15|1.5万|1|
+|ecs.g5ne.2xlarge|8|32|3.5|150万|175万|8|6|15|3万|1|
+|ecs.g5ne.4xlarge|16|64|7|300万|350万|16|8|30|6万|2|
+|ecs.g5ne.8xlarge|32|128|15|600万|700万|32|8|30|12万|4|
+|ecs.g5ne.16xlarge|64|256|30|1200万|1400万|32|8|30|24万|8|
+|ecs.g5ne.18xlarge|72|288|33|1350万|1600万|32|15|50|27万|9|
 
 **说明：**
 
@@ -532,14 +532,14 @@ sn2ne包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|:-----------|:-------|:--|:---|-------|
-|ecs.sn2ne.large|2|8.0|1.0|30万|2|2|6|
-|ecs.sn2ne.xlarge|4|16.0|1.5|50万|2|3|10|
-|ecs.sn2ne.2xlarge|8|32.0|2.0|100万|4|4|10|
-|ecs.sn2ne.3xlarge|12|48.0|2.5|130万|4|6|10|
-|ecs.sn2ne.4xlarge|16|64.0|3.0|160万|4|8|20|
-|ecs.sn2ne.6xlarge|24|96.0|4.5|200万|6|8|20|
-|ecs.sn2ne.8xlarge|32|128.0|6.0|250万|8|8|20|
-|ecs.sn2ne.14xlarge|56|224.0|10.0|450万|14|8|20|
+|ecs.sn2ne.large|2|8|1|30万|2|2|6|
+|ecs.sn2ne.xlarge|4|16|1.5|50万|2|3|10|
+|ecs.sn2ne.2xlarge|8|32|2|100万|4|4|10|
+|ecs.sn2ne.3xlarge|12|48|2.5|130万|4|6|10|
+|ecs.sn2ne.4xlarge|16|64|3|160万|4|8|20|
+|ecs.sn2ne.6xlarge|24|96|4.5|200万|6|8|20|
+|ecs.sn2ne.8xlarge|32|128|6|250万|8|8|20|
+|ecs.sn2ne.14xlarge|56|224|10|450万|14|8|20|
 
 **说明：**
 
